--- a/BSiNS/Src/scr_XMLNalogZaPrenos.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaPrenos.fx.yaml
@@ -22,8 +22,8 @@
                 UpdateContext(
                     {
                         transfer: GetXML_Nalog_Za_Prenos.Run(
-                            "AM-01_04_500055",
-                            "ReadyForProcessing"
+                            SelectedFile,
+                            SelectedFolder
                         )
                     }
                 )
@@ -89,7 +89,7 @@
                     }
                 );
             );
-            ForAll(
+            /*ForAll(
                 colTransferLines As Line,
                 Patch(
                     colTransferLines,
@@ -104,7 +104,7 @@
                         )
                     }
                 )
-            );
+            );*/
             
         );
         
@@ -639,7 +639,7 @@
                                 Height: =31
                                 HoverBorderColor: =""
                                 OnChange: |-
-                                    =UpdateIf(colTransferResEntries, NalogZaPrenosResEntry_1.Selected.Item_No = ThisRecord.Item_No ,{Quantity: Value(NalogZaPrenosResEntryQty_1.Value)});
+                                    =UpdateIf(colTransferResEntries, NalogZaPrenosResEntry_1.Selected.Entry_No = ThisRecord.Entry_No ,{Quantity: Value(NalogZaPrenosResEntryQty_1.Value)});
                                 PressedBorderColor: =""
                                 Value: =ThisItem.Quantity
                                 Width: =113
@@ -661,7 +661,7 @@
                                 HoverDateFill: =RGBA(222, 179, 184, 1)
                                 IconBackground: =RGBA(164, 38, 44, 1)
                                 OnChange: |-
-                                    =UpdateIf(colTransferResEntries, NalogZaPrenosResEntry_1.Selected.Item_No = ThisRecord.Item_No ,{Exp_Date: Text(DatePickerExpDateNalogZaPrenos_1.SelectedDate, "yyyy-mm-dd")})
+                                    =UpdateIf(colTransferResEntries, NalogZaPrenosResEntry_1.Selected.Entry_No = ThisRecord.Entry_No ,{Exp_Date: Text(DatePickerExpDateNalogZaPrenos_1.SelectedDate, "yyyy-mm-dd")})
                                 OnSelect: =
                                 SelectedDateFill: =RGBA(164, 38, 44, 1)
                                 Width: =158
@@ -685,7 +685,7 @@
                                 Height: =31
                                 HoverBorderColor: =""
                                 OnChange: |-
-                                    =UpdateIf(colTransferResEntries, NalogZaPrenosResEntry_1.Selected.Item_No = ThisRecord.Item_No ,{LOT_No: Text(NalogZaPrenosLot_1.Value)})
+                                    =UpdateIf(colTransferResEntries, NalogZaPrenosResEntry_1.Selected.Entry_No = ThisRecord.Entry_No ,{LOT_No: Text(NalogZaPrenosLot_1.Value)})
                                 PressedBorderColor: =""
                                 Value: =ThisItem.LOT_No
                                 Width: =113
@@ -840,7 +840,7 @@
                                             Outstanding_Qty: Text(tl.Outstanding_Qty),
                                             Shipment_Date: Text(tl.Shipment_Date),
                                             Receipt_Date: Text(tl.Receipt_Date),
-                                            Res_Entry: ForAll(Filter(colResEntries, ThisRecord.Item_No = tl.Item_No),
+                                            Res_Entry: ForAll(Filter(colTransferResEntries, ThisRecord.Item_No = tl.Item_No),
                                             {
                                                 Created_By: Text(Created_By),
                                                 Creation_Date: Text(Creation_Date),
